--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,11 @@ spring.application.name=producer
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=user
-spring.rabbitmq.password=user
+#spring.rabbitmq.username=user
+#spring.rabbitmq.password=user
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
 
-rabbitmq.queue.name=myQueue
-rabbitmq.exchange.name=myTopicExchange
-rabbitmq.routing.key=myRoutingKey.#
+rabbitmq.queue.name=myQueue.bootcamp
+rabbitmq.exchange.name=exchange.direct.bootcamp
+rabbitmq.routing.key=myRoutingKey.bootcamp.#
