--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=producer
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=user
-spring.rabbitmq.password=user
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
 
 rabbitmq.queue.name=myQueue
 rabbitmq.exchange.name=myTopicExchange
